static/css/base.css
html {
    height: 100%;
}

body {
    background-color: #8389a5;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Ubuntu', sans-serif;
}
.bold-text {
    font-weight: bold;
}

/* Mobile Toggler */

.custom-toggler.navbar-toggler { 
    border-color: red; 
}

.custom-toggler .navbar-toggler-icon { 
    background-image: url( 
        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.8)' stroke-width='4' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
}
.custom-toggler{
    background-color: #000;
}

/* Float Shadow effect for navigation links */

.hvr-float-shadow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}
.hvr-float-shadow:before {
  pointer-events: none;
  position: absolute;
  z-index: -1;
  content: '';
  top: 100%;
  left: 5%;
  height: 10px;
  width: 90%;
  opacity: 0;
  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
  /* W3C */
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform, opacity;
  transition-property: transform, opacity;
}
.hvr-float-shadow:hover, .hvr-float-shadow:focus, .hvr-float-shadow:active {
  -webkit-transform: translateY(-5px);
  transform: translateY(-5px);
  /* move the element up by 5px */
}
.hvr-float-shadow:hover:before, .hvr-float-shadow:focus:before, .hvr-float-shadow:active:before {
  opacity: 1;
  -webkit-transform: translateY(5px);
  transform: translateY(5px);
  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
}

#input-group-append-search{
    position: relative;
    bottom: 38px;
    left: 200px;
}

.js-delete-book{
    font-size: 1em;
}

/* font awesome icons */

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

 /* shop now button on home page */

.shop-now-button {
    background: #FF0000;
    color: white;
    min-width: 50%;
}

#home-text{
    font-weight: 600;
    color: #000;
}

.btn-black {
    background: black;
    color: white;
}

.btn-outline {
    border: 1px solid red;
    color: grey;
}

.btn-outline:hover,
.btn-outline:active,
.btn-outline:focus {
    background: black;
    color: white;
}
.drop-menu:hover{
    background: red; /* up hill */
}

.btn-dark:hover{
    background-color: red;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background-color: #B0C4DE;
    color: #000;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	z-index: -1;
}

a.category-badge > span.badge:hover {
    background: #B0C4DE !important;
    color: #fff !important;
}

/* back to top button */
.btt-button {
    height: 2.625rem;
    width: 2.625em;
    position: fixed;
    bottom: 0.625rem;
    right: 0.625rem;
}

/* back to top link, update product link & remove link */
.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/* credits: code used to style autocomplete in front of the navigation header */
.ui-autocomplete {
    position: absolute;
    top: 0;
    left: 0;
    cursor: default;
    z-index: 9050!important;
}

/*  --- Footer --- */

footer {
    background-color: #000;
    color: #fafafa;
    margin: 0;
    bottom: 0;
    padding: 1rem;
}

.social-links {
    padding-bottom: 0.9375em;
}

.social-links li a i {
    width: 2.1875rem;
    margin-right: 2.1875rem;
    height: 2.1875rem;
    padding: 0.75rem 0;
    border-radius: 50%;
    font-size: 1rem;
    line-height: 0.625rem;
    text-align: center;
    color: #000;
    background: #fafafa;
    
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background: #fff;
    color:red;
}

/* Bounce In Hover effect for Footer icons */

.list-inline-item-foot {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
}
.list-inline-item-foot:hover, .list-inline-item-foot:focus, .list-inline-item-foot:active {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
  -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
}

.mobile-link{
    margin-left: 140px;
}

/* ---- bootstrap toasts --- */

.message-container {
    position: fixed;
    top: 4.5rem;
    right: 1rem;
    z-index: 99999999999; /* displays over everything in its way */
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}


/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.btn-danger{
    background-color: red !important;
}

/* Allauth form */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* Media Queries */

 /* # Mobile */

@media only screen and (max-width: 768px) {
     /* # N / A */
     h2{
         margin-top: 2rem;
     }
     #footer-details {
        margin-top: 2.5rem;
   }
   #mobile-search{
        position: absolute;
        top: 0;
        right:10.6rem;
    }
    #mobile-link2{
        position: absolute;
        top: 0;
        right:3.2rem;
    }
    #mobile-link3{
        position: absolute;
        top: 0;
        right: 0.3rem;
    }
    body {
        background: none;
        background-color: #8389a5;
    }
}

 /* # Mobile landscape */

@media all and (min-width: 480px) {
   
    #footer-details {
        margin-top: 13rem;
   }
   #home-text{
        display: none !important;
   }
   #mobile-search{
    position: absolute;
    top: 0;
    right:10.6rem;
}
#mobile-link2{
    position: absolute;
    top: 0;
    right:3.7rem;
}
#mobile-link3{
    position: absolute;
    top: 0;
    right:0.5rem;
}

}

  /* # Tablets/Ipads portrait mode */

@media (min-width: 768px) and (max-width: 1024px){ 
    
   #home-text{
        display: block !important;
   }
   .container {
        margin-top: 1rem;
   }
   #mobile-search{
    position: absolute;
    top: 0;
    right:10.6rem;
}
#mobile-link2{
    position: absolute;
    top: 0;
    right:3.7rem;
}
#mobile-link3{
    position: absolute;
    top: 0;
    right:0;
}
body {
    background: none;
    background-color: #8389a5;
}
.product-details-container{
    margin-top: 13rem;
}
#add_to_bag{
    position: absolute;
    top: 0;
    right:0;
}
}

/* # Tablets/Ipads landscape mode */

@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
  
   #home-text{
        display: block !important;
   }
   h2{
       margin-bottom: 30px;
   }
   .container-top {
       margin-top: 10rem;
   }
   .container-top-bag, .container-top-reviews, .container-top-checkout{
       margin-top: 13rem;
   }
   .pagination{
       margin-top: 3rem;
   }
   #mobile-search{
    position: absolute;
    top: 0;
    right:10.6rem;
    }
    #mobile-link2{
        position: absolute;
        top: 0;
        right:3.7rem;
    }
    #mobile-link3{
        position: absolute;
        top: 0;
        right:0;
    }
    .product-details-container{
        margin-top: 13rem;
    }
    #add_to_bag{
        position: absolute;
        top: 0;
        right:0;
    }
}

 /* # Laptops and Desktops */

@media (min-width: 1025px){

   .container {
        margin-top: 2rem;
   }
   .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
    #home-text{
        display: block !important;
   }
} 
          
/* Media Query for Large screens */

@media only screen  and (min-width : 1200px) {

    .container {
        max-width: 80%;
        margin-top: 1rem;
   }
}

@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }
}

